# CT102-Assignment-4

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.c
.github/workflows/: build.yml  c-cpp.yml
files/: result_file1.csv  result_file2.csv  result_file_a4.csv
files/result/: result_file1.csv  result_file2.csv
include/: CharOperations.h  DataAnalysis.h  PlotData.h  SortingAlgorithms.h  SortingOperations.h  SortingResult.h
pbPlot/: pbPlots.c  pbPlots.h  supportLib.c  supportLib.h
src/: CharOperations.c  DataAnalysis.c  FileOperations.c  PlotData.c  SortingAlgorithms.c  SortingOperations.c
